<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFAFA2"
        android:padding="@dimen/activity_vertical_margin"
        tools:context=".CatsListViewActivity">

        <TextView
            android:id="@+id/border_white"
            android:layout_width="298dp"
            android:layout_height="542dp"
            android:layout_marginTop="92dp"
            android:background="@drawable/rounded_border_white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:layout_width="182dp"
            android:layout_height="206dp"
            android:layout_marginTop="172dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/gatinho_icon"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/gatinho_1" />

        </FrameLayout>


        <TextView
            android:id="@+id/name_logo"
            android:layout_width="35dp"
            android:layout_height="19dp"
            android:layout_marginTop="4dp"
            android:text="@string/name_logo"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/icon_logo"
            android:layout_width="30dp"
            android:layout_height="26dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/gatinho_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:listitem="@layout/item_view" />

        <TextView
            android:id="@+id/cat_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/cat_name"
            android:textColor="@color/design_default_color_error"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="132dp"
            tools:layout_editor_absoluteY="127dp" />

        <TextView
            android:id="@+id/cat_description"
            android:layout_width="285dp"
            android:layout_height="57dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/cat_description"
            android:textColor="#D74949"
            android:textSize="10sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="47dp"
            tools:layout_editor_absoluteY="394dp" />

        <TextView
            android:id="@+id/life_expectations"
            android:layout_width="136dp"
            android:layout_height="21dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/life_expectations"
            android:textColor="#D74949"
            android:textSize="10sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="43dp"
            tools:layout_editor_absoluteY="467dp" />

        <TextView
            android:id="@+id/adaptability"
            android:layout_width="83dp"
            android:layout_height="13dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/adaptability"
            android:textColor="#D74949"
            android:textSize="10sp"
            app:layout_constraintTop_toBottomOf="@id/life_expectations"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="45dp" />

        <TextView
            android:id="@+id/affection_level"
            android:layout_width="88dp"
            android:layout_height="11dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/affection_level"
            android:textColor="#D74949"
            android:textSize="10sp"
            app:layout_constraintTop_toBottomOf="@id/adaptability"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="39dp"
            tools:layout_editor_absoluteY="552dp" />

        <TextView
            android:id="@+id/energy_level"
            android:layout_width="88dp"
            android:layout_height="11dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/energy_level"
            android:textColor="#D74949"
            app:layout_constraintTop_toBottomOf="@id/affection_level"
            android:textSize="10sp"
            tools:ignore="MissingConstraints,SmallSp"
            tools:layout_editor_absoluteX="44dp"
            tools:layout_editor_absoluteY="566dp" />

        <TextView
            android:id="@+id/health_problems"
            android:layout_width="107dp"
            android:layout_height="13dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/health_problems"
            android:textColor="#D74949"
            android:textSize="10sp"
            app:layout_constraintTop_toBottomOf="@id/energy_level"
            tools:ignore="MissingConstraints,SmallSp"
            tools:layout_editor_absoluteX="44dp"
            tools:layout_editor_absoluteY="582dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
